# dsot

./: .env  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  GEMINI.md  Migrations.md  README.md  SETUP.md  TODO.md  diesel.toml
backend/: Cargo.toml
backend/src/: config.rs  instance.rs  lib.rs
backend/src/instance/: backend.rs  mod.rs
backend/src/storage/: mod.rs
backend/src/storage/redb/: file.rs  handler.rs  macros.rs  mem.rs  mod.rs  provider.rs  storage.rs  transaction.rs  trx.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  print.rs
cli/src/cmd/: config.rs  error.rs  macros.rs  mod.rs
cli/src/cmd/commands/: config.rs  error.rs  mod.rs  server.rs  user.rs
cli/src/cmd/globals/: mod.rs
cli/src/cmd/infra/: command.rs  command_gen.rs  declare_arg_macros.rs  mod.rs  output.rs
cli/src/cmd/subcommands/: config.rs  error.rs  mod.rs  traits.rs  user.rs
cli/src/init/: load_config.rs  mod.rs
core/: Cargo.toml
core/examples/: open_journal.rs
core/src/: error.rs  lib.rs  setup.rs
core/src/com/: mod.rs  request.rs  response.rs
core/src/db/: connect.rs  dsot_db.rs  entity.rs  entity_key.rs  list_entity.rs  local_db.rs  manager.rs  mod.rs  op.rs  read_entity.rs  schema.rs  set_entity.rs  sql.rs  table.rs
core/src/db/entities/: artist.rs  artist_aliases.rs  mod.rs
core/src/db/macros/: mod.rs  sql_entity.rs  utils.rs
core/src/entities/: album.rs  artist.rs  files.rs  mod.rs  release.rs  song_file.rs  tag.rs  tag_type.rs  track.rs
core/src/entities/album/: create.rs  ent.rs  mod.rs  query.rs
core/src/entities/artist/: create.rs  ent.rs  mod.rs
core/src/entities/rel/: artist_album.rs  mod.rs
core/src/entities/release/: create.rs  entity.rs  mod.rs
core/src/entities/utils/: collections.rs  hashset_macros.rs  mod.rs  uuid_macros.rs  uuidents.rs  vec_macros.rs
core/src/model/: album.rs  entities.rs  entity.rs  file_storage.rs  journal.rs  local_library.rs  mod.rs
core/src/model/entities/: album.rs  album_artist.rs  artist.rs  artist_alias.rs  mod.rs  music_file.rs
core/src/setup/: instance.rs  mod.rs  setup_config.rs
core/src/storage/: entity.rs  entry.rs  handler.rs  migration.rs  mod.rs  provider.rs  redb_provider.rs  schema.rs  schema_macros.rs  ser.rs  storage.rs
core/src/storage/handler/: backup.rs  error.rs  handler.rs  kind.rs  migrations.rs  mod.rs  op.rs
core/src/storage/kv/: entity.rs  mod.rs  ser.rs  storage.rs  transaction.rs
core/src/storage/macros/: bin_model.rs  mod.rs  sql_entity.rs  utils.rs
core/src/storage/sql/: entity.rs  mod.rs  op.rs  table.rs
music_brainz/: Cargo.toml  README.md
music_brainz/examples/: area_lookup.rs  area_search.rs  artist_search.rs  genre_list.rs  recording_lookup.rs  recording_search.rs  release_lookup.rs  work_search.rs
music_brainz/src/: error.rs  lib.rs
music_brainz/src/entities/: area.rs  artist.rs  genre.rs  mod.rs  recording.http  recording.rs  release.http  release.rs  release_group.http  release_group.rs  work.http  work.rs
music_brainz/src/entities/macros/: entity.rs  full_entity.rs  mb_entity.rs  mb_lookup.rs  mb_search.rs  mod.rs  stringify_or.rs
music_brainz/src/model/: alias.rs  genre.rs  life_span.rs  mod.rs  rel.rs  tag.rs
music_brainz/src/model/area/: area_alias.rs  area_type.rs  mod.rs
music_brainz/src/model/artist/: artist_credit.rs  artist_type.rs  mod.rs
music_brainz/src/model/release/: release_track.rs
music_brainz/src/model/release_group/: mod.rs  release_group_sub_type.rs  release_group_type.rs
music_brainz/src/operations/: lookup.rs  search.rs
music_brainz/src/search/: artist.rs  mod.rs  search.rs  search_query.rs
music_brainz/src/search/entities/: artist.rs  mod.rs  release_group.rs
music_brainz/src/search/macros/: mod.rs  search_query.rs
music_brainz/src/utils/: mod.rs  safe_parse_json.rs  user_agent.rs
runtime/: Cargo.toml
runtime/src/: config.rs  error.rs  lib.rs
runtime/src/infra/: config_load.rs  init_config_builder.rs  init_folder.rs  init_logger.rs  mod.rs
runtime/src/infra/config/: dirs.rs  loader.rs  logger.rs  mod.rs  read_value.rs
runtime/src/infra/db/: conn.rs  error.rs  handler.rs  kind.rs  location.rs  migrations.rs  mod.rs  path.rs
runtime/src/model/: inbox.rs  mod.rs  users.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  options.rs
server/src/routes/: mod.rs
server/src/routes/v1/: inbox.rs  mod.rs  users.rs
src/app/: Cargo.toml  Dioxus.toml
src/app/assets/styles/: root.css
src/app/desktop/: Cargo.toml  Dioxus.toml
src/app/desktop/src/: layout.rs  main.rs  routes.rs
src/app/mobile/: Cargo.toml  Dioxus.toml
src/app/mobile/src/: layout.rs  main.rs  routes.rs
src/app/shared_ui/: Cargo.toml
src/app/shared_ui/src/: assets.rs  lib.rs
src/app/src/: assets.rs  main.rs
src/app/src/desktop/: layout.rs  mod.rs
src/app/src/init/: mobile.rs  mod.rs
src/app/src/mobile/: mod.rs  routes.rs
src/app/src/views/: home_view.rs  mod.rs
src/db_sync/: Cargo.toml
src/db_sync/examples/: search_database.rs  sync_database.rs
src/db_sync/src/: db.rs  dser.rs  entity.rs  lib.rs  model.rs  registry.rs  repo.rs  sync.rs
src/db_sync/src/database/: entity_ops.rs  error.rs  journal.rs  mod.rs  transaction.rs
src/db_sync/src/manager/: backup.rs  error.rs  load.rs  mod.rs
src/db_sync/src/model/: mod.rs  update_value.rs
src/db_sync/tests/: sync_entity_contract.rs
src/desktop/: Cargo.toml  Dioxus.toml
src/desktop/src/: layout.rs  main.rs  routes.rs
src/desktop/src/init/: desktop.rs  mobile.rs  mod.rs
src/desktop/src/views/: config_view.rs  inbox_view.rs
src/desktop/src/widgets/: inbox_add.rs  inbox_list.rs  mod.rs
src/lib/: Cargo.toml
src/lib/src/: configs.rs  error.rs  jobs.rs  lib.rs  logger.rs  network.rs  user_manager.rs
src/lib/src/core/: cap.rs  config.rs  init.rs  logger.rs  mod.rs  model.rs
src/model/: Cargo.toml
src/model/src/: errors.rs  lib.rs
src/modules/db_sync/: Cargo.toml
src/modules/model/: Cargo.toml
src/modules/network/: Cargo.toml
src/music_brainz/: Cargo.toml
src/music_brainz/examples/: genre_lookup.rs  release_search.rs
(+423 files in other folders)
