
[workspace]
members = ["src/db_sync", "src/derive", "src/music_brainz", "src/model", "src/config"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["David Pires<dev@davidpires.pt>"]
license = "MIT"
repository = "https://github.com/Davidblkx/dsot"

[workspace.dependencies]
bakunin_config = "1.0.0"
blake3 = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
env_logger = { version = "0.11" }
linkme = "0.3"
log = { version = "0.4" }
paste = { version = "1.0.15" }
reqwest = { version = "0.13", features = ["blocking"] }
redb = { version = "4" }
rmp-serde = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.9", features = [
    "macros",
    "uuid",
    "sqlite",
    "chrono",
    "runtime-tokio",
    "json",
    "migrate",
], default-features = false }
thiserror = { version = "2" }
tokio = { version = "1.52", features = ["full"] }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
