
[workspace]
members = [
    "src/app/desktop",
    "src/app/mobile",
    "src/app/shared_ui",
    "src/lib",
    "src/modules/config",
    "src/modules/db_sync",
    "src/modules/derive",
    "src/modules/model",
    "src/modules/music_brainz",
    "src/modules/network",
    "src/modules/serde",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["David Pires<dev@davidpires.pt>"]
license = "MIT"
repository = "https://github.com/Davidblkx/dsot"

[workspace.dependencies]
anyhow = "1"
bakunin_config = "1.0.1"
blake3 = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.7", features = ["router"] }
dioxus-free-icons = { version = "0.10", features = ["lucide"] }
env_logger = { version = "0.11" }
fern = { version = "0.7" }
humantime = { version = "2" }
iroh = { version = "1.0.2" }
futures-util = { version = "0.3" }
linkme = "0.3"
log = { version = "0.4" }
paste = { version = "1" }
reqwest = { version = "0.13", features = ["blocking"] }
redb = { version = "4" }
rmp-serde = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
sqlx = { version = "0.9", features = [
    "macros",
    "uuid",
    "sqlite",
    "chrono",
    "runtime-tokio",
    "json",
    "migrate",
], default-features = false }
sysdirs = { version = "0.9", features = ["android-auto"] }
sysinfo = { version = "0.39" }
thiserror = { version = "2" }
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7" }
toml = { version = "1" }
url = { version = "2.5" }
urlencoding = { version = "2.1" }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
