[package]
name = "dsot_backend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
log = "0.4"
redb = "2.1.3"

[dev-dependencies]
tempfile = "3"
