[package]
name = "dsot_backend"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_core = { path = "../core" }
serde = { workspace = true }
log = { workspace = true }
redb = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
