[package]
name = "dsot_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_core = { path = "../core" }
music_brainz = { path = "../music_brainz" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40.0", features = ["full"] }
