[package]
name = "dsot_cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_core = { path = "../core" }
music_brainz = { path = "../music_brainz" }
dsot_runtime = { path = "../runtime" }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bakunin_config = { workspace = true }
clap = { workspace = true }
