[package]
name = "dsot_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
music_brainz = { path = "../music_brainz" }
serde = { version = "1", features = ["derive"] }
bincode1 = { version = "1.3.3", package = "bincode" }
thiserror = "1"
uuid = { version = "1.10.0", features = ["serde", "v7"] }
paste = "1.0.15"
chrono = "0.4.38"
log = "0.4"
sqlx = { version = "0.8.3", features = ["macros", "uuid"], default-features = false}

[dev-dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "uuid"] }
tokio = { version = "1", features = ["full"] }
