[package]
name = "dsot_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
music_brainz = { path = "../music_brainz" }
serde = { version = "1", features = ["derive"] }
bincode1 = { version = "1.3.3", package = "bincode" }
thiserror = "1"
uuid = { version = "1.16.0", features = ["serde", "v7"] }
paste = "1.0.15"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4"
sqlx = { version = "0.8.5", features = ["macros", "uuid", "sqlite", "chrono"], default-features = false}
redb = "2.1.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.5", features = ["macros", "uuid", "sqlite", "chrono", "migrate", "runtime-tokio"], default-features = false}
tempfile = "3"
