[package]
name = "dsot_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
music_brainz = { path = "../music_brainz" }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
paste = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
log = { workspace = true }
sqlx = { workspace = true, features = ["macros", "uuid", "sqlite", "chrono"], default-features = false}
redb = { workspace = true }
bincode1 = { version = "1.3.3", package = "bincode" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true, features = ["macros", "uuid", "sqlite", "chrono", "migrate", "runtime-tokio"], default-features = false}
tempfile = { workspace = true }
