[package]
name = "music_brainz"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.38"
log = "0.4.22"
paste = "1.0.15"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
url = "2.5.2"
urlencoding = "2.1.3"
thiserror = "1"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
