[package]
name = "dsot_runtime"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_core = { path = "../core" }
bakunin_config = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
flexi_logger = { workspace = true, features = ["async"] }
thiserror = { workspace = true }
