[package]
name = "server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_runtime = { path = "../runtime" }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
thiserror = { workspace = true }
