[package]
name = "dsot_desktop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bakunin_config = { workspace = true }
dioxus = { workspace = true }
dsot_lib = { path = "../lib" }
log = { workspace = true }
serde = { workspace = true }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
