[package]
name = "dsot_lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dsot_db_sync = { path = "../modules/db_sync" }
dsot_config = { path = "../modules/config" }
fern = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
