[package]
name = "dsot_lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dsot_db_sync = { path = "../modules/db_sync" }
dsot_config = { path = "../modules/config" }
dsot_model = { path = "../modules/model" }
fern = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sysdirs = { workspace = true }
uuid = { workspace = true }
