[package]
name = "dsot_lib"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dsot_db_sync = { path = "../modules/db_sync" }
dsot_config = { path = "../modules/config" }
dsot_model = { path = "../modules/model" }
dsot_network = { path = "../modules/network" }
dsot_serde = { path = "../modules/serde" }

fern = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
sysdirs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
iroh = { workspace = true }
