
[package]
name = "dsot_db_sync"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
chrono = { workspace = true }
linkme = { workspace = true }
iroh = { workspace = true }
rmp-serde = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
redb = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dsot_derive = { path = "../derive" }
