
[package]
name = "dsot_model"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
dsot_db_sync = { path = "../db_sync" }
dsot_derive = { path = "../derive" }
linkme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
redb = { workspace = true }
