
[package]
name = "dsot_network"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
futures-util = { workspace = true }
iroh = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dsot_db_sync = { path = "../db_sync" }
